--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         ></script>
+        <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.0/addons/p5.sound.min.js"></script>
 
         <title>Juegito</title>
